@@ -4,6 +4,8 @@ $Id$
 259	Luke Howard <lukeh@padl.com>
 
 	* fix for BUG#348: fix memory leak
+	* fix for BUG#349: nss_ldap crashes after START_TLS timeout
+	  (assertion failure in libldap)
 
 258	Luke Howard <lukeh@padl.com>
 
